appneding to div 5 day

--- a/style.css
+++ b/style.css
@@ -4,10 +4,6 @@
 };
 
 .low {
-    background-color: yellow;
+    background-color: orange;
     color: whitesmoke;
 };
-
-.blueDiv {
-    background-color: #ffffff;
-}
